--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 @plugin "daisyui" {
   theme:
-    light --default,
-    dark --prefersdark;
+    caramellatte --default,
+    coffee --prefersdark;
 }
 
 @source "./components/**/*.{js,ts,jsx,tsx}";
